[package]
name = "api-map"
version = "0.1.0"
authors = ["Matt Hooper <matthewjhooper94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paperclip = "0.2.0"
hyper = "0.13.1"